--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="index.html" class="logo"><img src="logo.png" alt="easyjpgtopdf logo" style="height:54px;"></a>
+                <a href="index.html" class="logo"><img src="/images/logo.png" alt="Logo" style="height:54px;"></a>
                 <div class="nav-links">
                     <a href="index.html" class="active">Home</a>
                     <div class="dropdown">
@@ -4175,6 +4175,7 @@
     </script>
 </body>
 </html>
+
 
 
 
