Migrate project into git repo with backend + firebase updates

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1035,7 +1035,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="index.html" class="logo"><img src="/images/logo.png" alt="Logo" style="height:54px;"></a>
+                <a href="index.html" class="logo"><img src="images/logo.png" alt="Logo" style="height:54px;"></a>
                 <div class="nav-links">
                     <a href="index.html" class="active">Home</a>
                     <div class="dropdown">
@@ -4043,6 +4043,8 @@
         }
     </script>
 
+    <script type="module" src="js/firebase-init.js"></script>
+
     <script>
         // Function to show the selected page and hide others
         function showPage(pageId, clickedElement) {
@@ -4175,6 +4177,7 @@
     </script>
 </body>
 </html>
+
 
 
 
