Add Razorpay integration and update .gitignore

--- a/ocr-image.html
+++ b/ocr-image.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -725,29 +725,6 @@
       </div>
     </section>
   </main>
-
-  <section class="comments">
-    <div class="container">
-      <h2 class="section-title">User Comments</h2>
-      <div class="comment-form">
-        <div class="form-group">
-          <label for="ocr-name">Your Name</label>
-          <input type="text" id="ocr-name" class="form-control" placeholder="Enter your name">
-        </div>
-        <div class="form-group">
-          <label for="ocr-email">Email Address</label>
-          <input type="email" id="ocr-email" class="form-control" placeholder="Enter your email">
-        </div>
-        <div class="form-group">
-          <label for="ocr-comment">Your Comment</label>
-          <textarea id="ocr-comment" class="form-control" placeholder="Share your experience with this tool"></textarea>
-        </div>
-        <button type="button" class="btn btn-primary">Submit Comment</button>
-      </div>
-    </div>
-  </section>
-
-  
 
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4/dist/tesseract.min.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" defer></script>
