--- a/protect-pdf.html
+++ b/protect-pdf.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Protect PDF | easyjpgtopdf</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"><style>*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}:root{--primary:#4361ee;--secondary:#3a0ca3;--light:#f8f9fa;--dark:#212529}.container{max-width:1200px;margin:0 auto;padding:0 20px}body{background:#f5f7ff;color:var(--dark);min-height:100vh;display:flex;flex-direction:column;line-height:1.6}header{background:#fff;position:sticky;top:0;z-index:100;box-shadow:0 2px 10px rgba(0,0,0,.08)}.navbar{display:flex;justify-content:space-between;align-items:center;padding:14px 0}.logo{display:flex;gap:10px;align-items:center;font-size:22px;font-weight:700;color:var(--primary);text-decoration:none}.logo i{color:var(--secondary)}nav .nav-links{display:flex;gap:22px;align-items:center}nav a{color:var(--dark);text-decoration:none;font-weight:500}nav a:hover,nav a.active{color:var(--primary)}.dropdown{position:relative}.dropdown-content{display:none;position:absolute;background:#fff;min-width:220px;border-radius:10px;box-shadow:0 8px 20px rgba(0,0,0,.12);top:100%;left:0;padding:10px 0}.dropdown:hover .dropdown-content{display:block}.hero{background:linear-gradient(135deg,var(--primary),var(--secondary));color:#fff;padding:60px 0;text-align:center;margin-bottom:30px;border-radius:0 0 20px 20px}.tool-page{background:#fff;border-radius:12px;padding:28px;box-shadow:0 5px 15px rgba(0,0,0,.05);margin-bottom:24px}.upload-area{border:2px dashed #ddd;border-radius:10px;padding:24px;text-align:center;cursor:pointer;margin-bottom:12px}.btn{display:inline-block;background:var(--primary);color:#fff;border:none;border-radius:40px;padding:10px 18px;margin-right:8px;cursor:pointer}.btn.secondary{background:#fff;color:var(--primary);border:1px solid var(--primary)}footer{background:var(--dark);color:#fff;padding:40px 0 20px;margin-top:auto}.footer-content{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:22px;margin-bottom:20px}.footer-links{list-style:none}.footer-links a{color:#aaa;text-decoration:none}.footer-links a:hover{color:#fff}.copyright{text-align:center;color:#aaa;border-top:1px solid #444;padding-top:16px;font-size:.9rem}@media(max-width:768px){nav .nav-links{display:none}}</style>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Protect PDF | easyjpgtopdf</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"><style>*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}:root{--primary:#4361ee;--secondary:#3a0ca3;--light:#f8f9fa;--dark:#212529}.container{max-width:1200px;margin:0 auto;padding:0 20px}body{background:#f5f7ff;color:var(--dark);min-height:100vh;display:flex;flex-direction:column;line-height:1.6}header{background:#fff;position:sticky;top:0;z-index:100;box-shadow:0 2px 10px rgba(0,0,0,.08)}.navbar{display:flex;justify-content:space-between;align-items:center;padding:14px 0}.logo{display:flex;gap:10px;align-items:center;font-size:22px;font-weight:700;color:var(--primary);text-decoration:none}.logo i{color:var(--secondary)}nav .nav-links{display:flex;gap:22px;align-items:center}nav a{color:var(--dark);text-decoration:none;font-weight:500}nav a:hover,nav a.active{color:var(--primary)}.dropdown{position:relative}.dropdown-content{display:none;position:absolute;background:#fff;min-width:220px;border-radius:10px;box-shadow:0 8px 20px rgba(0,0,0,.12);top:100%;left:0;padding:10px 0}.dropdown:hover .dropdown-content{display:block}.hero{background:linear-gradient(135deg,var(--primary),var(--secondary));color:#fff;padding:60px 0;text-align:center;margin-bottom:30px;border-radius:0 0 20px 20px}.tool-page{background:#fff;border-radius:12px;padding:28px;box-shadow:0 5px 15px rgba(0,0,0,.05);margin-bottom:24px}.upload-area{border:2px dashed #ddd;border-radius:10px;padding:24px;text-align:center;cursor:pointer;margin-bottom:12px}.btn{display:inline-block;background:var(--primary);color:#fff;border:none;border-radius:40px;padding:10px 18px;margin-right:8px;cursor:pointer}.btn.secondary{background:#fff;color:var(--primary);border:1px solid var(--primary)}footer{background:var(--dark);color:#fff;padding:40px 0 20px;margin-top:auto}.footer-content{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:22px;margin-bottom:20px}.footer-links{list-style:none}.footer-links a{color:#aaa;text-decoration:none}.footer-links a:hover{color:#fff}.copyright{text-align:center;color:#aaa;border-top:1px solid #444;padding-top:16px;font-size:.9rem}@media(max-width:768px){nav .nav-links{display:none}}</style>
 <style>
 /* comment styles injected */
 .comments { margin: 40px 0; }
@@ -101,49 +101,7 @@
 
 
 
-<section class="hero"><div class="container"><h1>Protect PDF</h1><p>Add password protection to your PDF files.</p></div></section><main class="container"><div class="tool-page"><h2>Upload PDF</h2><div class="upload-area" onclick="document.getElementById('protect-input').click()"><i class="fas fa-cloud-upload-alt" style="font-size:38px;color:var(--primary)"></i><h3>Drag & drop or click to browse</h3><input id="protect-input" type="file" accept=".pdf" style="display:none"></div><div class="form" style="margin:10px 0 16px"><label style="display:block;margin-bottom:6px;font-weight:600">Password</label><input type="password" class="form-control" style="width:100%;padding:12px;border:1px solid #ddd;border-radius:8px" placeholder="Enter password"></div><div><button class="btn">Protect PDF</button><a class="btn secondary" href="index.html">Back to Home</a></div></div></main><div class="features" style="background-color:#fff;padding:80px 0;border-radius:20px;margin-bottom:50px;">
-  <div class="container">
-    <h2 class="section-title">Why Choose easyjpgtopdf?</h2>
-    <div class="features-grid" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:40px;">
-      <div class="feature" style="display:flex;gap:20px;">
-        <div class="feature-icon" style="width:60px;height:60px;background-color:#f8f9fa;border-radius:12px;display:flex;align-items:center;justify-content:center;font-size:24px;color:#4361ee;flex-shrink:0;">
-          <i class="fas fa-shield-alt"></i>
-        </div>
-        <div class="feature-content">
-          <h3 style="margin-bottom:10px;font-size:1.3rem;">Secure & Private</h3>
-          <p style="color:#6c757d;">All files are processed securely and automatically deleted after 1 hour.</p>
-        </div>
-      </div>
-      <div class="feature" style="display:flex;gap:20px;">
-        <div class="feature-icon" style="width:60px;height:60px;background-color:#f8f9fa;border-radius:12px;display:flex;align-items:center;justify-content:center;font-size:24px;color:#4361ee;flex-shrink:0;">
-          <i class="fas fa-bolt"></i>
-        </div>
-        <div class="feature-content">
-          <h3 style="margin-bottom:10px;font-size:1.3rem;">Fast Processing</h3>
-          <p style="color:#6c757d;">Our optimized algorithms process your files in seconds.</p>
-        </div>
-      </div>
-      <div class="feature" style="display:flex;gap:20px;">
-        <div class="feature-icon" style="width:60px;height:60px;background-color:#f8f9fa;border-radius:12px;display:flex;align-items:center;justify-content:center;font-size:24px;color:#4361ee;flex-shrink:0;">
-          <i class="fas fa-desktop"></i>
-        </div>
-        <div class="feature-content">
-          <h3 style="margin-bottom:10px;font-size:1.3rem;">Works Everywhere</h3>
-          <p style="color:#6c757d;">Use easyjpgtopdf on any device with a modern web browser.</p>
-        </div>
-      </div>
-      <div class="feature" style="display:flex;gap:20px;">
-        <div class="feature-icon" style="width:60px;height:60px;background-color:#f8f9fa;border-radius:12px;display:flex;align-items:center;justify-content:center;font-size:24px;color:#4361ee;flex-shrink:0;">
-          <i class="fas fa-euro-sign"></i>
-        </div>
-        <div class="feature-content">
-          <h3 style="margin-bottom:10px;font-size:1.3rem;">Completely Free</h3>
-          <p style="color:#6c757d;">All our basic tools are free to use with no hidden costs.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div><script>document.getElementById('y').textContent=new Date().getFullYear();</script>
+<section class="hero"><div class="container"><h1>Protect PDF</h1><p>Add password protection to your PDF files.</p></div></section><main class="container"><div class="tool-page"><h2>Upload PDF</h2><div class="upload-area" onclick="document.getElementById('protect-input').click()"><i class="fas fa-cloud-upload-alt" style="font-size:38px;color:var(--primary)"></i><h3>Drag & drop or click to browse</h3><input id="protect-input" type="file" accept=".pdf" style="display:none"></div><div class="form" style="margin:10px 0 16px"><label style="display:block;margin-bottom:6px;font-weight:600" for="pdf-user-password">User Password</label><input id="pdf-user-password" type="password" class="form-control" style="width:100%;padding:12px;border:1px solid #ddd;border-radius:8px" placeholder="Enter user password (to open)"></div><div class="form" style="margin:10px 0 16px"><label style="display:block;margin-bottom:6px;font-weight:600" for="pdf-owner-password">Owner Password (optional)</label><input id="pdf-owner-password" type="password" class="form-control" style="width:100%;padding:12px;border:1px solid #ddd;border-radius:8px" placeholder="Enter owner password (permissions)"><p style="margin-top:6px;color:var(--gray);font-size:0.9rem;">If left empty, owner password will match the user password.</p></div><div><button class="btn">Protect PDF</button><a class="btn secondary" href="index.html">Back to Home</a></div></div></main>
 
 
 
@@ -163,13 +121,126 @@
             </p>
         </div>
     </footer>
-</body></html>
+    <script>
+      (function(){
+        const input = document.getElementById('protect-input');
+        const uploadArea = document.querySelector('.upload-area');
+        const userPasswordInput = document.getElementById('pdf-user-password') || document.querySelector('main.container .tool-page input[type="password"]');
+        const ownerPasswordInput = document.getElementById('pdf-owner-password');
+        const protectBtn = document.querySelector('.tool-page .btn:not(.secondary)');
+        let infoEl;
 
+        function ensureInfo() {
+          if (!infoEl && uploadArea) {
+            infoEl = document.createElement('p');
+            infoEl.id = 'protect-file-info';
+            infoEl.style.marginTop = '8px';
+            infoEl.style.color = 'var(--gray)';
+            const h3 = uploadArea.querySelector('h3');
+            (h3 ? h3 : uploadArea).after(infoEl);
+          }
+          return infoEl;
+        }
 
+        function updateState() {
+          const hasFile = !!(input && input.files && input.files.length);
+          const hasPwd = !!(userPasswordInput && userPasswordInput.value.trim());
+          const el = ensureInfo();
+          if (el) el.textContent = hasFile ? `Selected: ${input.files[0].name}` : '';
+          if (protectBtn) {
+            protectBtn.disabled = !(hasFile && hasPwd);
+            protectBtn.style.opacity = protectBtn.disabled ? '0.7' : '1';
+            protectBtn.style.cursor = protectBtn.disabled ? 'not-allowed' : 'pointer';
+          }
+        }
 
+        if (input) {
+          input.addEventListener('change', updateState);
+        }
+        if (userPasswordInput) {
+          userPasswordInput.addEventListener('input', updateState);
+        }
+        if (ownerPasswordInput) {
+          ownerPasswordInput.addEventListener('input', updateState);
+        }
 
+        if (uploadArea && input) {
+          uploadArea.addEventListener('dragover', e => { e.preventDefault(); uploadArea.style.background = '#f0f4ff'; });
+          uploadArea.addEventListener('dragleave', () => { uploadArea.style.background = ''; });
+          uploadArea.addEventListener('drop', e => {
+            e.preventDefault();
+            uploadArea.style.background = '';
+            if (e.dataTransfer && e.dataTransfer.files && e.dataTransfer.files.length) {
+              const file = e.dataTransfer.files[0];
+              if (file && /\.pdf$/i.test(file.name)) {
+                input.files = e.dataTransfer.files;
+                input.dispatchEvent(new Event('change'));
+              } else {
+                alert('Please drop a PDF file (.pdf).');
+              }
+            }
+          });
+        }
 
+        if (protectBtn) {
+          protectBtn.addEventListener('click', async e => {
+            e.preventDefault();
+            if (!input || !input.files || !input.files.length) {
+              alert('Please choose a PDF file first.');
+              return;
+            }
+            if (!userPasswordInput || !userPasswordInput.value.trim()) {
+              alert('Please enter a password.');
+              return;
+            }
+            const original = protectBtn.textContent;
+            protectBtn.disabled = true;
+            protectBtn.textContent = 'Encrypting...';
+            try {
+              const inFile = input.files[0];
+              const userPwd = userPasswordInput.value.trim();
+              const ownerPwd = (ownerPasswordInput && ownerPasswordInput.value.trim()) ? ownerPasswordInput.value.trim() : userPwd;
+              const inName = inFile.name;
+              const outName = (inName.endsWith('.pdf') ? inName.slice(0, -4) : inName) + '.protected.pdf';
 
+              const engine = window.__pdfcpu;
+              if (!engine) {
+                alert('Encryption engine is still loading. Please try again.');
+                return;
+              }
+
+              const args = ['encrypt', '-mode', 'aes', '-key', '256', '-upw', userPwd, '-opw', ownerPwd, `/input/${inName}`, `/output/${outName}`];
+              const outDir = await engine.run(args, [inFile]);
+              const outBlobFile = await outDir.readFile(`/${outName}`, 'application/pdf');
+
+              const url = URL.createObjectURL(outBlobFile);
+              const a = document.createElement('a');
+              a.href = url;
+              a.download = outName;
+              document.body.appendChild(a);
+              a.click();
+              setTimeout(() => { URL.revokeObjectURL(url); a.remove(); }, 0);
+
+              const el = ensureInfo();
+              if (el) el.textContent = `Encrypted: ${outName}`;
+            } catch (err) {
+              console.error(err);
+              alert('Encryption failed.');
+            } finally {
+              protectBtn.disabled = false;
+              protectBtn.textContent = original;
+            }
+          });
+        }
+
+        updateState();
+      })();
+    </script>
+    <script type="module">
+      import { Pdfcpu } from 'https://cdn.jsdelivr.net/npm/pdfcpu-wasm@0.1.0/index.js';
+      window.__pdfcpu = new Pdfcpu('https://cdn.jsdelivr.net/npm/pdfcpu-wasm@0.1.0/pdfcpu.wasm');
+    </script>
+    </body></html>
 
 
 
