Fix: Add donate.js module import, remove duplicate donation handlers

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4776,6 +4776,7 @@
 
     <script type="module" src="js/firebase-init.js"></script>
     <script type="module" src="js/auth.js"></script>
+    <script type="module" src="js/donate.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         const donateForm = document.getElementById('donate-form');
